--- a/package.json
+++ b/package.json
@@ -10,7 +10,6 @@
     "@material-ui/icons": "^4.11.2",
     "@reduxjs/toolkit": "^1.6.1",
     "@testing-library/jest-dom": "^5.11.4",
-    "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "@types/jest": "^26.0.15",
     "@types/node": "^12.0.0",
@@ -53,6 +52,8 @@
     ]
   },
   "devDependencies": {
+    "@testing-library/react": "^11.2.7",
+    "gh-pages": "^3.2.3",
     "prettier": "2.3.2"
   }
 }
